fixed some spacing

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
     background: linear-gradient(to right, #000000 0%, #282727 50%, #000000 100%);
     text-align: center;
-    margin: 100px 375px 200px;
+    margin: 100px 350px 200px;
 }
 
 #topHeader{
